--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "iconv-lite": "^0.4.24",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.1.10",
+    "nodemon": "^1.18.9"
   }
 }
