--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "mongodb": "^3.1.10",
+    "mongoose": "^5.4.3",
     "nodemon": "^1.18.9"
   }
 }
