--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-router": "^7.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.3",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "requests": "^0.2.2"
   }
 }
