--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.3",
     "nodemon": "^1.18.9",
-    "requests": "^0.2.2"
+    "request": "^2.88.0"
   }
 }
