--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "child_process": "^1.0.2",
+    "core-js": "^2.6.3",
     "express": "^4.16.4",
     "http-parser": "^1.0.3",
     "http-parser-js": "^0.5.0",
