--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "child_process": "^1.0.2",
+    "cookie-parser": "^1.4.4",
     "core-js": "^2.6.3",
     "express": "^4.16.4",
     "http-parser": "^1.0.3",
