--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "iconv-lite": "^0.4.24",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.3",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.9",
     "readline": "^1.3.0",
     "request": "^2.88.0"
